--- a/feed/css/main.css
+++ b/feed/css/main.css
@@ -18,13 +18,13 @@ header span {
     display: table;
     margin: 0 auto;
 }
-#posts {
+ #posts {
     width: 600px;
     height: 50px;
     margin: 0 auto;
     padding: 30px;
     display: table;
-}
+} 
 .posts img {
     max-width: 600px; 
 }
@@ -32,4 +32,9 @@ img {
     width: 400px;
     height: auto;
     margin: 30px;
+} 
+.autor-photo {
+    width:70px;
+    height: 70px;
+    border-radius: 50%;
 }
